--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         <footer>
             <div class="footerMenu">
                 <h3>About Us</h3>
-                <h3>Declaimer</h3>
+                <h3>Mission</h3>
+                <h3>Portal Features</h3>
                 <h3>Constact Us</h3>
+                </div>
             </div>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, libero reprehenderit, possimus atque deleniti a nostrum, quasi quis quia fuga 
