--- a/login.html
+++ b/login.html
@@ -38,15 +38,15 @@
         </main>
         <footer>
             <div class="footerMenu">
-                <h3>About Us</h3>
+                <h3>About&nbsp;;Us</h3>
                 <h3>Mission</h3>
-                <h3>Portal Features</h3>
-                <h3>Constact Us</h3>
+                <h3>Portal&nbsp;Features</h3>
+                <h3>Contact&nbsp;Us</h3>
             </div>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, libero reprehenderit, possimus atque deleniti a nostrum, quasi quis quia fuga 
             aperiam exercitationem dolorem eligendi at itaque nisi expedita. Repellat, consequatur?</p>
-            <h5 class="copyright">Made by Maaz & The EduPortal Team. © 2025 All rights reserved.</h5>
+            <h5 class="copyright">Made by <b>Maaz & The EduPortal Team.</b> © 2025 All rights reserved.</h5>
         </footer>
     </body>
 </html>
